added new transition between choosing

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body onload="main()">
     <div id="main">
         <div id="main-wrapper">
-            <h1>What do you want to trigger?</h1>
+            <h1 id="main-title"><span id="t-00" onclick="goto_node(this)">What do you want to trigger?</span></h1>
             <hr>
             <div id="questions">
             </div>
-        </div>
-            
+        </div>  
     </div>
 </body>
 <script src="js/classes.js"></script>
