changed some animations, reworked how nodes are mapped -> they are now mapped by having a reference to the parent node

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body onload="main()">
     <div id="main">
         <div id="main-wrapper">
-            <h1 id="main-title"><span id="t-00" onclick="goto_node(this)">What do you want to trigger?</span></h1>
-            <hr>
+            <h1 id="main-title"><span id="t-00" onclick="goto_node(this)" class="title-nav">What is your Role?</span></h1>
             <div id="questions">
             </div>
         </div>  
