added a fav icon, new class node_tree, which converts json data into a tree of decisions -> should now be functionaly for backend api calls

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
         including stylesheet
     -->
     <link rel="stylesheet" href="css/index.css">
-
+    
+    <!--
+        Favicon
+    -->
+    <link rel="apple-touch-icon" sizes="180x180" href="media/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="media/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="media/img/favicon-16x16.png">
+    <link rel="manifest" href="media/img/site.webmanifest">
+    <link rel="mask-icon" href="media/img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body onload="main()">
     <div id="main">
@@ -20,6 +30,7 @@
         </div>  
     </div>
 </body>
+<script src="js/dev_data_json.js"></script>
 <script src="js/classes.js"></script>
 <script src="js/functions.js"></script>
 </html>
